[package]
name = "pokemon_go_data"
version = "0.1.1"
authors = ["Adam Hammes <adam@hammes.io>"]
build = "build/build.rs"
repository = "https://github.com/adamhammes/pokemon_go_data"
license = "MIT"
description = "A convenient interface for Pokemon Go data"

[build-dependencies]
csv = "1.0.0-beta.4"
serde = "^1.0.0"
serde_derive = "^1.0.0"

[dependencies]
